--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-redux": "^5.1.1",
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.4",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "styled-components": "^4.4.0"
     }
 }
